--- a/wk26/tab-layout-master/package.json
+++ b/wk26/tab-layout-master/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "formative3-1",
+  "name": "tab-layout",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
